dts: qcom: Import updated mido changes
https://github.com/MiCode/Xiaomi_Kernel_OpenSource/commit/db5513a732da6cc820638487f24aea0dcf63adf7

Change-Id: If0ef927d293c5c4921bd04b9e3d5f22271822962
Signed-off-by: Albert I <krascgq@outlook.co.id>

--- a/arch/arm/boot/dts/qcom/msm-audio.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-audio.dtsi
@@ -333,7 +333,7 @@
 			"MIC BIAS Internal1", "Secondary Mic",
 			"AMIC1", "MIC BIAS External",
 			"AMIC2", "MIC BIAS Internal2",
-			"AMIC3", "MIC BIAS Internal1";
+			"AMIC3", "MIC BIAS External";
 
 
 		qcom,hdmi-dba-codec-rx;
