--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -218,9 +218,9 @@
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
-			qcom,autoadjust-vfloat;
-			qcom,fastchg-current-comp = <900>;
-			qcom,float-voltage-comp = <11>;
+			qcom,override-usb-current;
+			qcom,fastchg-current-comp = <1200>;
+			qcom,float-voltage-comp = <16>;
 
 			qcom,chgr@1000 {
 				reg = <0x1000 0x100>;
@@ -332,6 +332,8 @@
 			qcom,fg-cutoff-voltage-mv = <3400>;
 			qcom,cycle-counter-en;
 			qcom,capacity-learning-on;
+			qcom,hold-soc-while-full;
+			qcom,fg-restore-batt-info;
 			qcom,fg-cc-cv-threshold-mv = <4380>;
 			qcom,fg-vbat-estimate-diff-mv = <200>;
 
