--- a/arch/arm/boot/dts/qcom/msm8953-qrd-sku3.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-qrd-sku3.dtsi
@@ -102,7 +102,7 @@
 
 };
 
-dsi_otm1911_fhd_vid {
+&dsi_otm1911_fhd_vid {
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 
 };
@@ -179,4 +179,3 @@ dsi_otm1911_fhd_vid {
 &wcd9335 {
 	status = "disabled";
 };
-
