--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1211,7 +1211,7 @@ CONFIG_USB_EXT_TYPE_C_PERICOM=y
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QPNP_MISC is not set
-# CONFIG_FORCE_FAST_CHARGE is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1962,7 +1962,7 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_MDSP_TS is not set
 # CONFIG_MSM_RDBG is not set
-# CONFIG_FRANDOM is not set
+CONFIG_FRANDOM=y
 
 #
 # I2C support
@@ -2216,7 +2216,7 @@ CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 # CONFIG_MSM_BCL_SOMC_CTL is not set
-# CONFIG_QNS_SYSTEM is not set
+CONFIG_QNS_SYSTEM=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
@@ -2847,9 +2847,8 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
-# CONFIG_FB_MSM_MDSS_KCAL_CTRL is not set
-# CONFIG_FB_SSD1307 is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_ADF is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_LT8912 is not set
@@ -2993,7 +2992,7 @@ CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8X16=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
-# CONFIG_SOUND_CONTROL is not set
+CONFIG_SOUND_CONTROL=y
 
 #
 # CODEC drivers
@@ -3659,8 +3658,8 @@ CONFIG_STAGING=y
 # CONFIG_R8723AU is not set
 # CONFIG_RTS5208 is not set
 # CONFIG_LINE6_USB is not set
-# CONFIG_SNAPPY_COMPRESS is not set
-# CONFIG_SNAPPY_DECOMPRESS is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 # CONFIG_FB_XGI is not set
 # CONFIG_FT1000 is not set
 
@@ -3925,7 +3924,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
-# CONFIG_ADRENO_IDLER is not set
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
